--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,7 +5,6 @@
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   padding: 25px;
   border-color: white;
-  /*color: yellow;*/
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
   background-color: black;
 
@@ -26,14 +25,25 @@
   background-color: black;
   padding: 15px;
   height: 100px;
-  width: 200px;
 
+}
+
+#payed, #recieved, #given {
+  padding: 2px;
+}
+
+#payedText, #recievedText, #givenText, #infoDisplay {
+  color: white;
 }
 
 #mSide {
 
+  position: relative;
+    top: -125px;
+    left: -25px;
+
   background-color: black;
-  padding: 5px;
+  padding: 10px;
   float: right;
   color: white;
   height: 300px;
@@ -51,8 +61,10 @@
 }
 
 body {
+
   background-color: black;
   border-color: white;
   border-style: solid;
   border-width: medium;
+
 }
